--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,228 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import MainContainer from "../layouts/MainContainter.astro";
+import Nav from "../components/Nav.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
-</Layout>
+<Layout title="Home">
+  <MainContainer>
+    <Nav />
+    <img
+      src="keep-the-apostrophe_sticker.png"
+      class="w-40 sm:w-60 mx-auto m-6"
+      alt="keep the apostrophe logo"
+    />
+    <h1 class="text-2xl md:text-5xl font-bold mb-4 mt-8 text-slate-600">
+      Help us Irish keep our good names!
+    </h1>
+    <p class="text-slate-600 sm:text-lg mb-4">
+      If you've ever been told you have "invalid characters" in your name (Irish
+      or not) this site is for you! Software and forms should be built to
+      accomodate real human names rather than the other way around. Share your
+      story, learn what you can do, and shop our site to help support the cause.
+    </p>
+    <h4 class="font-bold text-slate-600 mb-2 text-2xl">
+      My name is Thomas O’Leary
+    </h4>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-</style>
+    <div class="">
+      <p class="text-slate-600 sm:text-lg mb-4">
+        <img src="/tom-photo.jpg" class="float-start mr-4 mb-2" alt="dad pic" />
+      </p>
+
+      <p class="text-slate-600 sm:text-lg mb-4">
+        Quite often when I want to buy something on the internet or try to
+        reserve airline tickets I fill in all the necessary information, hit the
+        submit button, and nothing happens. What might I have left out or typed
+        wrong? The answer turns out to be not what I typed wrong or left out,
+        but what I put in—the apostrophe.
+      </p>
+    </div>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      <img
+        src="/bad-form.svg"
+        alt="invalid name message with mad emoji"
+        title="invalid-name"
+      />
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      For the most part, computers and apostrophes have never become fast
+      friends. It’s a spotty situation. Online programs seem to have no trouble
+      in accepting apostrophes when they are doing their two main assignments:
+      subbing for omitted letters, as in “can’t” for “cannot,” or indicating
+      possession, like “Where is the dog’s water bowl?” But come to being used
+      in Irish names it’s game over. My little mark is treated as an
+      unacceptable, non-conforming “foreign element.” Grrr.
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      Out of this frustration, and the sense that we were not alone, was born
+      the idea to form the Keep the Apostrophe in Irish Names advocacy group
+      along with my son Matt O&#39;Leary.
+    </p>
+
+    <h4 class="font-bold text-slate-600 mb-2 text-2xl">
+      What’s in a name? Our ethnic history
+    </h4>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      From ancient times, the Irish developed a complex personal naming system,
+      based largely on a family’s history and relationships. Names consist of a
+      first given name followed by a double patronym, using the father’s and
+      grandfather’s names. An O with a small dash at the middle top (called a
+      diacritical mark) meant “descended from” or “grandson” or “son of,”
+      followed by the surname. “Mac” and “Fitz” serve the same purpose. Even
+      though some Irish names are based on occupations and locations, family
+      connections have always been more important and more commonly used for
+      many centuries.
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      The Irish Times reports that when the death of Tigherneach Ó Cleirigh, a
+      prominent lord of County Galway, was inscribed in the 916 Annals it was
+      believed to be the oldest surname recorded anywhere in Europe. With more
+      English influence felt around 1500 A.D. the Irish spelling of names was
+      often changed to an English spelling using O with an apostrophe to stand
+      in for the earlier Ó and its diacritical mark on top.
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      All of this rich history is threatened by the likes of a movement called
+      Kill the Apostrophe. Its website states that it wants to remove the mark
+      from the English language because “it serves only to annoy those who know
+      how it is supposed to be used and to confuse those who dont (sic).” Of
+      course, the website is concerned about the apostrophe’s use to fill in for
+      omitted letters and its possessive duties, but if the mark is dropped from
+      common usage (Starbucks and Hudsons Bay for instance) it will also
+      disappear from computer keyboards, wiping out a vital part of the Irish
+      naming system and the valuable cultural history it represents.
+    </p>
+
+    <h4 class="font-bold text-slate-600 mb-2 text-2xl">
+      A rich history ignored
+    </h4>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      Obviously, there are folks out there in the commercial world who are
+      either indifferent to this important feature in Irish names, or actually
+      determined to do away with it. They belong to the same bunch who think
+      teaching cursive writing in elementary school “takes too much time.” (Who
+      needs to know how to read the original Declaration of Independence, sign
+      their name, or read their grandmother&#39;s hand written letters? And who
+      needs beautifully executed calligraphy anyway?)
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      Scripturient writer Ian Chadwick muses on the possible dropping of
+      apostrophes: “Can you imagine what the Irish would do if they had no
+      apostrophes? Would we write Obrien or OBrien or use a dash for O-Brien.
+      One incorrect “solution,” which pops up regularly, is to simply pass the O
+      off as your middle initial. Meanwhile, a few computer programs have
+      figured out seemingly clumsy ways to deal with apostrophes. A printed
+      version of my name can sometimes appear as O&#x27;Leary. This morning it
+      was O&#039;Leary on a car loan site.
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      A major bank that I attend regularly cannot accommodate my name being
+      spelled correctly in its master files or on my credit card. The best the
+      bank can do is print my last name correctly for my checkbook checks. A
+      leading airline has me correctly in older files, but once it merged with a
+      smaller line the apostrophe got dropped. The only way I can make a
+      reservation is to telephone and asked not to be slapped with a special fee
+      to book over the phone since the system has me in two conflicting versions
+      that won’t accept me on line. Also, there is the worry that you’ll have
+      problems with tight security at airport checkin, where a name on your
+      ticket has to exactly match your ID documents.
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      I have a hunch that if robot computers had their way, we Irish and
+      everybody else would be identified with numbers, or even worse with a
+      quick scanning of our bar codes.
+    </p>
+
+    <p class="sm:text-lg mb-4 text-green-600 underline">
+      <a href="/joinus/">Join us</a>
+    </p>
+
+    <div class="border-b border-gray-200 mb-6 mt-4"></div>
+
+    <h4 class="font-bold text-slate-600 mb-2 text-2xl">Editorial Note</h4>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      Although the original motivation to create this site was the struggles of
+      having an apostrophe in one&#39;s Irish name, we know that many other
+      names have the same type of issues. We aim to be an inclusive cause, and
+      hopefully help <em>everyone</em> with accents, dashes, or amount of letters
+      in your name, for example, that is considered somehow &quot;non-standard&quot;.
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      We stand for racial equality and justice, and condemn discrimination in
+      any and all forms.
+    </p>
+
+    <div class="divide-y"></div>
+
+    <h4 class="font-bold text-slate-600 mb-2 text-2xl">An expert opinion</h4>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      For an expert&#39;s take on this topic, we chatted with <strong
+        >Ashish Lakhiani</strong
+      >, Computer Scientist, Software and Business Enthusiast with over 10 years
+      of industry experience.
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      <strong
+        ><em
+          >Is it technically possible for software applications to accept an
+          apostrophe in the name input field?</em
+        ></strong
+      >
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      Yes, it&#39;s possible. Information Technology specialists can develop
+      code level checks, by writing a few more lines of code, to allow the usage
+      of this character in name field data entry points of user interfaces
+      (mobile, web, etc.).
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      <strong><em>Why doesn&#39;t every company just do that?</em></strong>
+    </p>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      There are potential security implications. Computer Programmers and
+      Information Security advisors aim to decrease the attack surface and
+      strengthen the attack vectors in the systems that they develop. This is
+      important for keeping systems safe from attackers. It’s common practice to
+      decrease the opportunity for an end user to enter special characters such
+      as (? | | &quot; | % | \ | / | : | ‘ * | Due to their usage in popular
+      programming languages like C, C++, PHP, C#, SQL, and Java many of these
+      characters can trigger code execution in Information Systems if not
+      handled correctly in the code. Although the intention of Computer
+      Programmers and Information Security advisors is beneficial for end user
+      safety, it is unfair to ask individuals to skip the apostrophe in their
+      names due to this reason. With a little bit more work on code level checks
+      this character can be allowed for use. Apostrophes in names have cultural
+      value and help to make them unique in an artistic way. This character
+      should be accommodated for names in software systems.
+    </p>
+
+    <div class="border-b border-gray-200 mb-6 mt-4"></div>
+
+    <p class="text-slate-600 sm:text-lg mb-4">
+      <strong
+        >Questions/Comments? <a
+          href="mailto:mattosurf@gmail.com"
+          class="text-green-600 underline">Email us</a
+        ></strong
+      >
+    </p>
+  </MainContainer>
+</Layout>
