--- a/src/pages/joinus.astro
+++ b/src/pages/joinus.astro
@@ -97,7 +97,7 @@ import Footer from "../components/Footer.astro";
       <form name="contact" method="POST" data-netlify="true">
         <p>
           <label class="block text-base font-bold text-medium text-gray-700"
-            >Your Name</label
+            >Your Name (yes, your real name)</label
           >
           <input
             type="text"
