--- a/src/pages/joinus.astro
+++ b/src/pages/joinus.astro
@@ -17,8 +17,8 @@ import Footer from "../components/Footer.astro";
     <p class="text-slate-600 sm:text-lg mb-4">
       Irish or not, dear reader, we urge you to join in the effort to keep the
       apostrophe in Irish names. In addition to giving kudos and supporting
-      companies and services that accept correctly spelt names in the name
-      field, we urge you to:
+      companies that accept correctly spelled names in the name field, we urge
+      you to:
     </p>
 
     <h4 class="font-bold text-slate-600 mb-2 text-2xl">1. Complain!</h4>
