--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -7,6 +7,7 @@ import Nav from "../components/Nav.astro";
 <Layout title="Privacy">
   <MainContainer>
     <Nav />
+    <h1 class="text-xl font-bold">Privacy Policy</h1>
     <p>
       This privacy policy (&quot;policy&quot;) will help you understand how
       O&#39;Leary Studios (&quot;us&quot;, &quot;we&quot;, &quot;our&quot;) uses
